# resume_shortlister

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirement.txt  requirements.txt  upload_models.py
.streamlit/: config.toml
app/: app.py  langchain_utils.py
data/processed/: X_features.csv  y_labels.csv
data/raw/: internshala_jobs.csv  naukri_jobs.csv
models/: best_params.json  feature_cols.json  final_model.pkl  shap_values.pkl  test_data.pkl  tfidf_vectorizer.pkl
notebooks/: feature_engineering.ipynb  intershala-data-cleaning.ipynb  naukri_scrapping.ipynb  resume-cleaning.ipynb  resume-eda.ipynb  resume.ipynb
reports/: model_results.csv  shap_feature_importance.csv
scrapper/: internshala_scraper.py  naukari_jobs.py
